# Data-Analytics-Dashboard

./: .agent-config.json  .cursorrules  .cursorrules-backend.md  .cursorrules-fullstack.md  .cursorrules-uiux.md  .env.bak  .gitignore  MIGRATION_GUIDE.md  PROJECT_README.md  README.md  TEST_RESULTS_SUMMARY.md  auto-commit.sh  docker-compose.yml  empty_columns_analysis.json  manage-auto-commit.sh  package-lock.json  pyproject.toml  requirements.txt
Test MVP/: App.tsx  README.md  constants.ts  index.html  metadata.json  package.json  types.ts
backend/: .env.example  README.md  requirements.txt
config/: .cursorrules  .cursorrules-backend.md  .cursorrules-database.md  .cursorrules-frontend-uiux.md  .cursorrules-frontend.md  .cursorrules-fullstack.md  Dockerfile.api  Dockerfile.web  README.md  docker-compose.yml
docs/: PROJECT_STRUCTURE.md  agent-coordination.md  agent1-handoff.md  agent2-status-and-handoffs.md  agent4-complete-review.md  agent4-comprehensive-codebase-review.md  agent4-execution-complete.md  agent4-final-status.md  agent4-implementation-review.md  architecture.md  database_relationships.md  frontend-integration-summary.md  python_scripts_verification.md  shared-types-documentation.md  sql_dashboard_mapping.md  sql_queries_index.md  sql_query_verification_report.md
prisma/: schema.prisma
scripts/: README.md  analyze_database_integrity.py  analyze_job_customer_linkage.py  analyze_name_matching.py  analyze_orphaned_performance_records.py  analyze_test_location_jobs.py  analyze_test_location_relationships.py  apply_migrations.py  check_migration_status.py  (+23 more)
(+266 files in other folders)
